zeit.cms changes
================

1.0b4 (unreleased)
------------------

- Fixed cms lock handling when resources are locked by other systems (or if we
  think it was locked by another system).

1.0b3 (2008-06-28)
------------------

- Speichern von Assets stabiler (Persistenz-Problem).
- Bild-Metdaten-Anzeige: Titel wird jetzt angezeigt (bug #4304).
- CMS geht nicht mehr kaputt, wenn das today.xml leer ist (bug #4323).

1.0b2 (2008-06-28)
------------------

- Die Channel-Ansicht geht nicht mehr kaputt, wenn ein Objekt ohne Titel
  syndiziert wurde (bug #4312).
- Entfernen von Links aus Channels stabilisiert.
- Assets-Popup: Einklappen/Ausklappen des Baumens ohne Zugriff auf
  WebDAV-Server.
- Vernünftige Fehlermeldung, wenn ein Related nicht zum XML werden kann.
- Korrektes Löschen von Caches beim abort (bug #4299).
- Sperren von Resourcen beim Veröffentlichen.

1.0b1 (2008-06-26)
------------------

- Styling des globalen Drop-Down-Menus
- Menu im Metadaten-Preview funktioniert wieder.
- Sortieren bestimmter Channels geht wieder (bug #4302).
- Metadaten-Vorschau bei Bilderguppen zeigt Thumbnails der Bilder.
- Bildergruppe geht nicht kaputt, wenn ein Ordner zur Bildergruppe wird, der
  nicht nur Bilder enthält (bug #4301).
- Asset-Views bei Center-Page (bug #4306).
- SyndicatedIn-Source war optimistisch über den Inhalt und ging bei
  "unbekannten Resourcen" kaputt (bug #4300).
- DailyNL in den Standard-Metadaten (bug #4307).
- JS-Warnung, wenn kein Firefox verwendet wird (bug #4305).
- Popup-Asset/Image-Browser expandiert den automatisch Baum wenn man in einem 
  Ordner drin ist.
- date-last-modified als webdav-property für XML-Inhalte (bug #4310).

0.9.22 (2008-06-23)
-------------------

- Die Relateds werden beim Ändern des relateds nicht mehr doppelt in den
  Channel eingetragen (bug #4293).
- Globale Menus umgebaut, so dass weniger wichtige Eintrage in einem Dropdown
  verfügbar sind.
- Manuelles einstellen von Jahr/Ausgabe (bug #4273).