@@ -20,6 +20,10 @@ NotNecessary = zeit.workflow.source.NotNecessary
 WORKFLOW_NS = u'http://namespaces.zeit.de/CMS/workflow'
 
 
+class ScriptError(Exception):
+    """Raised when the publish/retract script fails."""
+
+
 class ITimeBasedPublishing(zeit.cms.workflow.interfaces.IPublishInfo):
     """Time based publishing."""
 
