@@ -4,8 +4,10 @@ zeit.cms changes
 1.0b4 (unreleased)
 ------------------
 
-- Fixed cms lock handling when resources are locked by other systems (or if we
-  think it was locked by another system).
+- CMS-Lock-Behandlung repariert wenn Resourcen in anderne System gesperrt
+  werden (oder das CMS das denkt).
+- Workflow: Fehler beim Veröffentlichen/Zurückziehen im Objectlog speichern
+  und dem Benutzer anzeigen.
 
 1.0b3 (2008-06-28)
 ------------------
